[gd_scene load_steps=3 format=3 uid="uid://bqgm703amk853"]

[ext_resource type="Script" path="res://src/states/menu/main_menu.gd" id="1_rbe2p"]

[sub_resource type="LabelSettings" id="LabelSettings_uuynm"]
font_size = 69
shadow_color = Color(1, 1, 1, 0)

[node name="MainMenu" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbe2p")

[node name="C" type="CenterContainer" parent="."]
layout_mode = 2
offset_right = 510.0
offset_bottom = 720.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="C"]
layout_mode = 2
offset_left = 145.0
offset_top = 276.0
offset_right = 365.0
offset_bottom = 444.0

[node name="MarginContainer" type="MarginContainer" parent="C/PanelContainer"]
layout_mode = 2
offset_right = 220.0
offset_bottom = 168.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="C/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="PlayButton" type="Button" parent="C/PanelContainer/MarginContainer/V"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 200.0
offset_bottom = 31.0
text = "Play"

[node name="OptionsButton" type="Button" parent="C/PanelContainer/MarginContainer/V"]
layout_mode = 2
offset_top = 39.0
offset_right = 200.0
offset_bottom = 70.0
text = "Options"

[node name="CreditsButton" type="Button" parent="C/PanelContainer/MarginContainer/V"]
layout_mode = 2
offset_top = 78.0
offset_right = 200.0
offset_bottom = 109.0
text = "Credits"

[node name="QuitButton" type="Button" parent="C/PanelContainer/MarginContainer/V"]
layout_mode = 2
offset_top = 117.0
offset_right = 200.0
offset_bottom = 148.0
text = "Quit"

[node name="C2" type="CenterContainer" parent="."]
layout_mode = 2
offset_left = 514.0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Label" type="Label" parent="C2"]
layout_mode = 2
offset_left = 158.0
offset_top = 311.0
offset_right = 608.0
offset_bottom = 409.0
text = "Marble Game"
label_settings = SubResource("LabelSettings_uuynm")

[connection signal="pressed" from="C/PanelContainer/MarginContainer/V/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="C/PanelContainer/MarginContainer/V/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="C/PanelContainer/MarginContainer/V/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="C/PanelContainer/MarginContainer/V/QuitButton" to="." method="_on_quit_button_pressed"]
